--- a/src/main/java/graphics/fxml/AdminMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminMenu.fxml
@@ -13,7 +13,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AdminMenu">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/CustomerSellerAdminMenu.css" />
+    </stylesheets>
     <children>
         <VBox layoutX="24.0" layoutY="113.0" prefHeight="246.0" prefWidth="145.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
             <children>
