--- a/src/main/java/graphics/fxml/cssSheets/BackGround.css
+++ b/src/main/java/graphics/fxml/cssSheets/BackGround.css
@@ -1,8 +1,8 @@
 .root {
     -fx-font-size: 14px;
     -fx-font-family: sans-serif;
-    -fx-background-image: url("off.jpg");
-    -fx-background-size: 1035 600;
+    -fx-background-image: url("backGround.jpg");
+    -fx-background-size: 600 600;
 }
 
 .table-view{
@@ -53,7 +53,6 @@
     0% { background-position: 0 0; }
     50% { background-position: 0 -100px; }
 }
-
 .choice-box {
           -fx-background-color:
              #c3c4c4,
@@ -61,6 +60,6 @@
             radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
             -fx-background-radius: 30;
             -fx-background-insets: 0,1,1;
-            -fx-text-fill: #212121;
+            -fx-text-fill: #FAFAFA ;
             -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
 }
