--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AllProductsMenu">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
+   <stylesheets>
+      <URL value="@cssSheets/BasicStyle.css" />
+   </stylesheets>
+   <stylesheets>
+      <URL value="@cssSheets/BackGround.css" />
+   </stylesheets>
    <children>
       <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" text="back" />
       <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" prefHeight="32.0" prefWidth="106.0" text="Filter" />
@@ -24,9 +25,9 @@
       <TextField fx:id="nameTextField" layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
       <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
       <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="135.0" />
-      <CheckBox fx:id="priceCheckBox" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
+      <CheckBox fx:id="priceCheckBox" layoutX="4.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
       <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
-      <CheckBox fx:id="averageRateCheckBox" layoutX="146.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
+      <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
       <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" prefHeight="32.0" prefWidth="106.0" text="Sort" />
       <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
       <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="494.0">
