--- a/src/main/java/graphics/fxml/PerBuyLog.fxml
+++ b/src/main/java/graphics/fxml/PerBuyLog.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PerBuyLog">
-   <children>
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/BackGround.css" />
+    </stylesheets>
+    <children>
       <TableView fx:id="tableView" layoutX="14.0" layoutY="48.0" prefHeight="304.0" prefWidth="479.0">
         <columns>
           <TableColumn prefWidth="68.20001524686813" text="productId" />
@@ -21,16 +28,16 @@
          </font>
       </Label>
       <Label layoutX="514.0" layoutY="73.0" text="Total Price" />
-      <Label fx:id="paidMoney" layoutX="514.0" layoutY="107.0" prefHeight="18.0" prefWidth="56.0" />
-      <Label layoutX="493.0" layoutY="151.0" text="Amount of Discount" />
-      <Label fx:id="amountOfDiscount" layoutX="514.0" layoutY="191.0" prefHeight="18.0" prefWidth="56.0" />
-      <Label layoutX="518.0" layoutY="234.0" prefHeight="18.0" prefWidth="47.0" text="Discount" />
-      <Label fx:id="discountUsed" layoutX="514.0" layoutY="274.0" prefHeight="18.0" prefWidth="56.0" />
+      <Label fx:id="paidMoney" alignment="CENTER" layoutX="514.0" layoutY="99.0" prefHeight="35.0" prefWidth="67.0" />
+      <Label layoutX="493.0" layoutY="151.0" text="Discount Amount" />
+      <Label fx:id="amountOfDiscount" alignment="CENTER" layoutX="501.0" layoutY="174.0" prefHeight="35.0" prefWidth="80.0" />
+      <Label layoutX="518.0" layoutY="234.0" prefHeight="18.0" prefWidth="56.0" text="Discount" />
+      <Label fx:id="discountUsed" alignment="CENTER" layoutX="508.0" layoutY="252.0" prefHeight="35.0" prefWidth="80.0" />
       <Button layoutX="280.0" layoutY="360.0" mnemonicParsing="false" text="Back" />
       <Label layoutX="442.0" layoutY="12.0" text="Date :" />
-      <Label fx:id="date" layoutX="493.0" layoutY="12.0" prefHeight="18.0" prefWidth="72.0" />
-      <Label layoutX="177.0" layoutY="22.0" prefHeight="26.0" prefWidth="72.0" text="( Log Code :" />
-      <Label fx:id="logCode" layoutX="254.0" layoutY="23.0" prefHeight="26.0" prefWidth="28.0" />
-      <Label layoutX="286.0" layoutY="20.0" prefHeight="26.0" prefWidth="28.0" text=")" />
+      <Label fx:id="date" alignment="CENTER" layoutX="493.0" layoutY="7.0" prefHeight="26.0" prefWidth="88.0" />
+      <Label layoutX="177.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
+      <Label fx:id="logCode" alignment="CENTER" layoutX="254.0" layoutY="23.0" prefHeight="26.0" prefWidth="47.0" />
+      <Label layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="28.0" text=")" />
    </children>
 </AnchorPane>
