--- a/src/main/java/graphics/fxml/PurchasingMenu.fxml
+++ b/src/main/java/graphics/fxml/PurchasingMenu.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PurchasingMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: @cssSheets/purchase.jpg" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PurchasingMenu">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
     <stylesheets>
         <URL value="@cssSheets/PurchasingMenu.css" />
     </stylesheets>
@@ -15,10 +18,10 @@
                 <Font name="Bookshelf Symbol 7" size="24.0" />
             </font>
         </Label>
-        <GridPane layoutX="109.0" layoutY="130.0" prefHeight="180.0" prefWidth="381.0">
+        <GridPane layoutX="72.0" layoutY="93.0" prefHeight="243.0" prefWidth="461.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="398.0" minWidth="10.0" prefWidth="159.8" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.99998474121094" minWidth="10.0" prefWidth="301.4" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -44,22 +47,22 @@
                 </Label>
                 <TextField fx:id="name" prefHeight="41.0" prefWidth="191.0" promptText="Name" GridPane.columnIndex="1" />
                 <TextField fx:id="address" prefHeight="40.0" prefWidth="191.0" promptText="Address" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="number" prefHeight="40.0" prefWidth="191.0" promptText="Number" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Label text="Discount Code" GridPane.rowIndex="3">
                     <font>
                         <Font name="Bookshelf Symbol 7" size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="discountCodeField" prefHeight="40.0" prefWidth="191.0" promptText="Discount Code" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="discountCodeField" prefHeight="45.0" prefWidth="302.0" promptText="Discount Code" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="number" prefHeight="42.0" prefWidth="191.0" promptText="Number" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
         </GridPane>
-        <Label layoutX="156.0" layoutY="83.0" text="Please enter your information below!">
+        <Label layoutX="153.0" layoutY="73.0" text="Please enter your information below!">
             <font>
                 <Font name="Bookshelf Symbol 7" size="18.0" />
             </font>
         </Label>
-        <Button layoutX="175.0" layoutY="326.0" mnemonicParsing="false" onAction="#checkInputsValidity" prefHeight="50.0" prefWidth="100.0" text="Purchase" />
-        <Button layoutX="311.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToPreviousPage" prefHeight="50.0" prefWidth="100.0" text="Cancel" />
+        <Button layoutX="172.0" layoutY="336.0" mnemonicParsing="false" onAction="#checkInputsValidity" prefHeight="50.0" prefWidth="100.0" text="Purchase" />
+        <Button layoutX="310.0" layoutY="336.0" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="100.0" text="Cancel" />
         <Button layoutY="-3.0" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="90.0" text="Back" />
     </children>
 
