--- a/src/main/java/graphics/fxml/SellerMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerMenu.fxml
@@ -4,11 +4,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import java.net.URL?>
 <AnchorPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.SellerMenu">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/CustomerSellerAdminMenu.css" />
+    </stylesheets>
     <children>
         <VBox layoutX="20.0" layoutY="109.0">
             <children>
-                <MenuButton mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="Edit Personal Info">
+                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="Edit Personal Info">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
                         <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
@@ -21,7 +28,7 @@
                 </MenuButton>
                 <Button mnemonicParsing="false" onAction="#goToSellLogPage" prefHeight="36.0" prefWidth="145.0" text="My Sell History" />
             <Button mnemonicParsing="false" onAction="#viewProducts" prefHeight="36.0" prefWidth="145.0" text="My Products" />
-            <MenuButton mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="My Offs">
+            <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="My Offs">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#viewOffs" text="View My Offs" />
                 <MenuItem mnemonicParsing="false" onAction="#checkValidityOfOffId" text="Edit Off" />
