--- a/src/main/java/graphics/fxml/cssSheets/AllOffsMenu.css
+++ b/src/main/java/graphics/fxml/cssSheets/AllOffsMenu.css
@@ -1,7 +1,7 @@
 .root {
     -fx-font-size: 14px;
     -fx-font-family: sans-serif;
-    -fx-background-image: url("addOff1.jpg");
+    -fx-background-image: url("addOff.jpg");
     -fx-background-size: 1035 600;
 }
 
