--- a/src/main/java/graphics/fxml/AdminManageCodesMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminManageCodesMenu.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="635.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AdminManageCodesMenu">
+<AnchorPane prefHeight="600.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AdminManageCodesMenu">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/BackGround.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/AddProduct.css" />
+    </stylesheets>
     <children>
         <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" text="back" />
         <TableView fx:id="discountTable" layoutX="89.0" prefHeight="536.0" prefWidth="633.0">
@@ -20,8 +28,8 @@
                 <TableColumn fx:id="viewMoreColumn" prefWidth="83.0" text="View more" />
             </columns>
         </TableView>
-        <Button onAction="#addDiscount" layoutX="41.0" layoutY="546.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="147.0" text="Add Discount Code" />
-        <Button onAction="#editDiscount" layoutX="498.0" layoutY="546.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="161.0" text="Edit Discount Code" />
-        <Button onAction="#removeDiscount" layoutX="253.0" layoutY="546.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="161.0" text="Remove Discount Code" />
+        <Button layoutX="41.0" layoutY="546.0" mnemonicParsing="false" onAction="#addDiscount" prefHeight="46.0" prefWidth="184.0" text="Add Discount Code" />
+        <Button layoutX="476.0" layoutY="546.0" mnemonicParsing="false" onAction="#editDiscount" prefHeight="46.0" prefWidth="184.0" text="Edit Discount Code" />
+        <Button layoutX="253.0" layoutY="546.0" mnemonicParsing="false" onAction="#removeDiscount" prefHeight="46.0" prefWidth="184.0" text="Remove Discount Code" />
     </children>
 </AnchorPane>
