--- a/src/main/java/graphics/fxml/AdminManageRequestsMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminManageRequestsMenu.fxml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AdminManageRequestsMenu">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AdminManageRequestsMenu">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/BackGround.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/AddProduct.css" />
+    </stylesheets>
     <children>
         <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" text="back" />
         <TableView fx:id="requestsTable" layoutX="83.0" prefHeight="600.0" prefWidth="517.0">
             <columns>
-                <TableColumn fx:id="idColumn" prefWidth="61.0" text="ID" />
-                <TableColumn fx:id="typeColumn" prefWidth="156.0" text="Req Type" />
-                <TableColumn fx:id="statusColumn" prefWidth="110.0" text="Status" />
-                <TableColumn fx:id="viewMoreColumn" prefWidth="110.0" text="More Details" />
-                <TableColumn fx:id="respondColumn" prefWidth="110.0" text="Respond" />
+                <TableColumn fx:id="idColumn" prefWidth="56.59998321533203" text="ID" />
+                <TableColumn fx:id="typeColumn" prefWidth="150.5999755859375" text="Req Type" />
+                <TableColumn fx:id="statusColumn" prefWidth="116.5999755859375" text="Status" />
+                <TableColumn fx:id="viewMoreColumn" prefWidth="108.99996948242188" text="More Details" />
+                <TableColumn fx:id="respondColumn" prefWidth="82.40004882812502" text="Respond" />
             </columns>
         </TableView>
     </children>
