--- a/src/main/java/graphics/fxml/ProductMenu.fxml
+++ b/src/main/java/graphics/fxml/ProductMenu.fxml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ProductMenu">
+<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+          prefWidth="700.0" vgap="10.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ProductMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
     <stylesheets>
-    <URL value="@cssSheets/BackGround.css" />
+        <URL value="@cssSheets/BackGround.css" />
     </stylesheets>
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="198.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="228.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="10.0" prefWidth="152.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="10.0" prefWidth="24.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="254.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="10.0" prefWidth="163.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="0.0" prefWidth="0.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
         <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="253.0" minHeight="10.0" prefHeight="126.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="232.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="251.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="232.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Label fx:id="productNameLabel" alignment="CENTER" graphicTextGap="10.0" prefHeight="82.0" prefWidth="200.0" text="Product Name" textAlignment="CENTER" textFill="#130e1b" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -35,25 +45,32 @@
         </Label>
         <ImageView fx:id="imageview" fitHeight="146.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
         </ImageView>
-        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <Button alignment="CENTER" mnemonicParsing="false" onAction="#button" onMousePressed="#buttonSound" prefHeight="61.0" prefWidth="186.0" text="Add to Cart" GridPane.rowIndex="4" />
-        <VBox prefHeight="169.0" prefWidth="238.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <VBox prefHeight="169.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
             <children>
-                <TilePane hgap="30.0" prefHeight="94.0" prefWidth="249.0" vgap="30.0">
-                    <children>
-                        <ChoiceBox fx:id="choiceBox" onMousePressed="#buttonSound" prefHeight="27.0" prefWidth="264.0" />
-                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#choiceBoxAction" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="137.0" text="Apply Action" />
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                    </padding>
-                </TilePane>
+                <TableView fx:id="similarProducts" prefHeight="244.0" prefWidth="231.0">
+                    <columns>
+                        <TableColumn fx:id="idColumn" prefWidth="71.0" text="ProductId" />
+                        <TableColumn fx:id="nameColumn" prefWidth="102.0" text="Product Name" />
+                        <TableColumn fx:id="viewMoreColumn" prefWidth="78.0" text="View more" />
+                    </columns>
+                </TableView>
             </children>
         </VBox>
         <ListView fx:id="listView" prefHeight="238.0" prefWidth="215.0" GridPane.rowIndex="3" />
-      <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToMyAccount" onMousePressed="#buttonSound" prefHeight="44.0" prefWidth="116.0" text="My Account" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToMyAccount" onMousePressed="#buttonSound" prefHeight="44.0" prefWidth="116.0" text="My Account" GridPane.columnIndex="2" GridPane.rowIndex="4" />
         <Button alignment="CENTER" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="44.0" prefWidth="116.0" text="Back" GridPane.rowIndex="1" />
-        <ImageView fx:id="statusImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <ImageView fx:id="statusImageView" fitHeight="150.0" fitWidth="186.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <TilePane hgap="30.0" prefHeight="94.0" prefWidth="249.0" vgap="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <children>
+                <ChoiceBox fx:id="choiceBox" onMousePressed="#buttonSound" prefHeight="27.0" prefWidth="232.0" />
+                <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#choiceBoxAction" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="137.0" text="Apply Action" />
+                <Label prefHeight="30.0" prefWidth="128.0" text="Similar Products" />
+            </children>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+        </TilePane>
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
