--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
    <stylesheets>
       <URL value="@cssSheets/BasicStyle.css" />
    </stylesheets>
@@ -30,15 +36,16 @@
       <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Average Rate" />
       <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Sort" />
       <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
-      <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="494.0">
+      <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="598.0">
          <columns>
-            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
-            <TableColumn fx:id="imageColumn" prefWidth="76.0" text="Image" />
-            <TableColumn fx:id="categoryColumn" prefWidth="70.0" text="Category" />
+            <TableColumn fx:id="nameColumn" prefWidth="73.0" text="ProductId" />
+            <TableColumn fx:id="imageColumn" prefWidth="84.0" text="Image" />
+            <TableColumn fx:id="statusColumn" prefWidth="78.0" text="Status" />
+            <TableColumn fx:id="categoryColumn" prefWidth="76.0" text="Category" />
             <TableColumn fx:id="priceColumn" prefWidth="56.0" text="Price" />
-            <TableColumn fx:id="averageRateColumn" prefWidth="88.0" text="Average rate" />
-            <TableColumn fx:id="sellerColumn" prefWidth="56.0" text="Seller" />
-            <TableColumn fx:id="buttonColumn" prefWidth="72.0" text="View More" />
+            <TableColumn fx:id="averageRateColumn" prefWidth="96.0" text="Average rate" />
+            <TableColumn fx:id="sellerColumn" prefWidth="59.0" text="Seller" />
+            <TableColumn fx:id="buttonColumn" prefWidth="75.0" text="View More" />
          </columns>
       </TableView>
       <Button layoutX="138.0" layoutY="25.0" mnemonicParsing="false" onAction="#viewCart" onMousePressed="#buttonSound" prefHeight="38.0" prefWidth="83.0" text="View Cart" />
