--- a/src/main/java/graphics/fxml/LoginMenu.fxml
+++ b/src/main/java/graphics/fxml/LoginMenu.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import java.net.URL?>
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane fx:id="back" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.LoginMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
@@ -36,7 +37,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="PASSWORD" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
