--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import java.net.URL?>
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
@@ -44,7 +45,7 @@
             <Label text="username :" />
             <Label text="password :" GridPane.rowIndex="1" />
             <TextField fx:id="username" GridPane.columnIndex="1" />
-            <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="familyName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
