--- a/src/main/java/graphics/fxml/cssSheets/AddOff.css
+++ b/src/main/java/graphics/fxml/cssSheets/AddOff.css
@@ -1,6 +1,6 @@
 .root {
     -fx-font-size: 14px;
     -fx-font-family: sans-serif;
-    -fx-background-image: url("addOff1.jpg");
+    -fx-background-image: url("addOff.jpg");
     -fx-background-size: 600 600;
 }
