--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -56,7 +49,7 @@
             <Label text="number :" GridPane.rowIndex="5" />
             <Label fx:id="usernameMessage" prefHeight="17.0" prefWidth="52.0" GridPane.columnIndex="2" />
             <Label fx:id="passwordMessage" prefHeight="17.0" prefWidth="51.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="companyLabel" text="company name :" GridPane.rowIndex="6" />
+            <Label fx:id="companyLabel" text="company :" GridPane.rowIndex="6" />
             <TextField fx:id="company" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
